--- a/bikesys/templates/index.html
+++ b/bikesys/templates/index.html
@@ -9,11 +9,11 @@
         <title>SharingBike</title>
     </head>
 
-    <body>
+    <body class="bgimg fullscreen">
         <h1 id="notification" style="color: red;" class="center"></h1>
         <!-- login/register -->
         <div id="verifyNode">
-            <section class="center fullscreen vertical bigfont">
+            <section class="center vertical bigfont">
                 <h1>Sharing Bike System</h1>
                 <section>
                     <label for="username">Username:</label>
@@ -36,7 +36,7 @@
             </section>
         </div>
         <div id="customerNode" class="notSee">
-            <section class="center fullscreen vertical">
+            <section class="center vertical">
                 <section>
                     <h1>Rent Bike</h1>
                     <label for="bikeid1">BikeID:</label>
@@ -63,7 +63,7 @@
             </section>
         </div>
         <div id="operatorNode" class="notSee">
-            <section class="center fullscreen vertical">
+            <section class="center vertical">
                 <section>
                     <h1>Repair Bikes</h1>
                     <label for="bikeid4">BikeID:</label>
@@ -84,7 +84,7 @@
             </section>
         </div>
         <div id="managerNode" class="notSee">
-            <section class="center fullscreen vertical">
+            <section class="center vertical">
                 <section>
                     <h1>Data Report</h1>
                     <input type="button" value="Generate" class="btn" onclick="mgt('report')">
