--- a/bikesys/templates/index.html
+++ b/bikesys/templates/index.html
@@ -11,94 +11,107 @@
     </head>
 
     <body class="bgimg fullscreen">
-        <h1 id="notification" style="color: red;" class="center h25"></h1>
-        <!-- login/register -->
-        <div id="verifyNode">
-            <div class="center vertical">
-                <section class="center vertical bigfont card w60">
-                    <h1>Sharing Bike System</h1>
-                    <section>
-                        <label for="username">Username:</label>
-                        <input id="username" type="text" name="username" class="text">
-                    </section>
-                    <section>
-                        <label for="pwd">Password:</label>
-                        <input id="pwd" type="password" name="pwd" class="text">
-                    </section>
-                    <section>
-                        <label for="cls">User Class:</label>
-                        <input id="cls" type="radio" name="cls" value="customer" checked="true" class="text">Customer
-                        <input id="cls" type="radio" name="cls" value="operator" class="text">Operator
-                        <input id="cls" type="radio" name="cls" value="manager" class="text">Manager
-                    </section>
-                    <section>
-                        <input type="button" value="Login" class="btn" onclick="verify('login')">
-                        <input type="button" value="Register" class="btn" onclick="verify('register')">
-                    </section>
-                </section>
-            </div>
+        <!-- small screen part -->
+        <div id="smallpart">
+            <h2 class="center fullscreen bgtransblack">This is the system for PC Browser, please use laptop or larger screen device!</h2>
         </div>
-        <div id="customerNode" class="notSee">
-            <div class="center vertical">
-                <section class="bigfont card w80">
-                    <section>
-                        <h1>Rent Bike</h1>
-                        <label for="bikeid1">BikeID:</label>
-                        <input id="bikeid1" type="text" name="bikeid1" class="text">
-                        <input type="button" value="Rent" class="btn" onclick="cust('rent')">
-                        <hr />
+        <!-- normal part -->
+        <div id="normalpart">
+            <h1 id="notification" style="color: red;" class="center h25"></h1>
+            <!-- login/register -->
+            <div id="verifyNode">
+                <div class="center vertical">
+                    <section class="center vertical bigfont card w60">
+                        <h1>Sharing Bike System</h1>
+                        <section>
+                            <label for="username">Username:</label>
+                            <input id="username" type="text" name="username" class="text">
+                        </section>
+                        <section>
+                            <label for="pwd">Password:</label>
+                            <input id="pwd" type="password" name="pwd" class="text">
+                        </section>
+                        <section>
+                            <label for="cls">User Class:</label>
+                            <input id="cls" type="radio" name="cls" value="customer" checked="true"
+                                class="text">Customer
+                            <input id="cls" type="radio" name="cls" value="operator" class="text">Operator
+                            <input id="cls" type="radio" name="cls" value="manager" class="text">Manager
+                        </section>
+                        <section>
+                            <input type="button" value="Login" class="btn" onclick="verify('login')">
+                            <input type="button" value="Register" class="btn" onclick="verify('register')">
+                        </section>
+                        <hr/>
+                        <a href="/admin">Backend Login</a>
                     </section>
-                    <section>
-                        <h1>Return Bike</h1>
-                        <label for="bikeid2">BikeID:</label>
-                        <input id="bikeid2" type="text" name="bikeid2" class="text">
-                        <label for="loc">Location:</label>
-                        <input id="loc" type="text" name="loc" class="text">
-                        <input type="button" value="Back" class="btn" onclick="cust('back')">
-                        <hr />
-                    </section>
-                    <section>
-                        <h1>Report for Repair</h1>
-                        <label for="bikeid3">BikeID:</label>
-                        <input id="bikeid3" type="text" name="bikeid3" class="text">
-                        <input type="button" value="Report" class="btn" onclick="cust('report')">
-                        <hr />
-                    </section>
-                </section>
+                </div>
             </div>
-        </div>
-        <div id="operatorNode" class="notSee">
-            <div class="center vertical">
-                <section class="bigfont card w80">
-                    <section>
-                        <h1>Repair Bikes</h1>
-                        <label for="bikeid4">BikeID:</label>
-                        <input id="bikeid4" type="text" name="bikeid4" class="text">
-                        <input type="button" value="Repair" class="btn" onclick="oper('repair')">
-                        <hr />
+            <div id="customerNode" class="notSee">
+                <div class="center vertical">
+                    <section class="bigfont card w80">
+                        <section>
+                            <h1>Rent Bike</h1>
+                            <label for="bikeid1">BikeID:</label>
+                            <input id="bikeid1" type="text" name="bikeid1" class="text">
+                            <input type="button" value="Rent" class="btn" onclick="cust('rent')">
+                            <hr />
+                        </section>
+                        <section>
+                            <h1>Return Bike</h1>
+                            <label for="bikeid2">BikeID:</label>
+                            <input id="bikeid2" type="text" name="bikeid2" class="text">
+                            <label for="loc">Location:</label>
+                            <input id="loc" type="text" name="loc" class="text" onclick="getSelections('locations')"
+                                list="locList" placeholder="please choose">
+                            <datalist id="locList">
+                            </datalist>
+                            <input type="button" value="Return" class="btn" onclick="cust('back')">
+                            <hr />
+                        </section>
+                        <section>
+                            <h1>Report for Repair</h1>
+                            <label for="bikeid3">BikeID:</label>
+                            <input id="bikeid3" type="text" name="bikeid3" class="text">
+                            <input type="button" value="Report" class="btn" onclick="cust('report')">
+                            <hr />
+                        </section>
                     </section>
-                    <section>
-                        <h1>Track Bikes</h1>
-                        <input type="button" value="Track" class="btn" onclick="oper('track')">
-                        <hr />
-                    </section>
-                    <section>
-                        <h1>Balance Bikes</h1>
-                        <input type="button" value="Balance" class="btn" onclick="oper('balance')">
-                        <hr />
-                    </section>
-                </section>
+                </div>
             </div>
-        </div>
-        <div id="managerNode" class="notSee">
-            <div class="center vertical">
-                <section class="bigfont card w80">
-                    <section>
-                        <h1>Data Report</h1>
-                        <input type="button" value="Generate" class="btn" onclick="mgt('report')">
-                        <hr />
+            <div id="operatorNode" class="notSee">
+                <div class="center vertical">
+                    <section class="bigfont card w80">
+                        <section>
+                            <h1>Repair Bikes</h1>
+                            <label for="bikeid4">BikeID:</label>
+                            <input id="bikeid4" type="text" name="bikeid4" class="text">
+                            <input type="button" value="Repair" class="btn" onclick="oper('repair')">
+                            <hr />
+                        </section>
+                        <section>
+                            <h1>Track Bikes</h1>
+                            <input type="button" value="Track" class="btn" onclick="oper('track')">
+                            <hr />
+                        </section>
+                        <section>
+                            <h1>Balance Bikes</h1>
+                            <input type="button" value="Balance" class="btn" onclick="oper('balance')">
+                            <hr />
+                        </section>
                     </section>
-                </section>
+                </div>
+            </div>
+            <div id="managerNode" class="notSee">
+                <div class="center vertical">
+                    <section class="bigfont card w80">
+                        <section>
+                            <h1>Data Report</h1>
+                            <input type="button" value="Generate" class="btn" onclick="mgt('report')">
+                            <hr />
+                        </section>
+                    </section>
+                </div>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/axios@0.21.0/dist/axios.min.js"></script>
